memos-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos-services
spec:
  type: NodePort
  selector:
    app: memos
  ports:
    - port: 5230
      targetPort: 5230
