php-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpadmin
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: phpadmin
  template:
    metadata:
      labels:
        component: phpadmin
    spec:
      containers:
      - name: phpadmin
        image: phpmyadmin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpadmin
spec:
  type: NodePort
  selector:
    component: phpadmin
  ports:
  - port: 8000
    targetPort: 80
